# csm-api-client-python

./: .gitignore  CHANGELOG.md  Jenkinsfile.github  README.md  coverage.cfg  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  unittest.cfg
build_scripts/: build.sh
csm_api_client/: session.py  util.py  xname.py
csm_api_client/service/: __init__.py  bos.py  capmc.py  cfs.py  fabric.py  fas.py  fox.py  gateway.py  hsm.py  ims.py  sls.py  telemetry.py  vcs.py
tests/service/: test_bos.py  test_capmc.py  test_fabric.py  test_fas.py  test_fox.py  test_gateway.py  test_hsm.py  test_vcs.py
