[tool.poetry]
name = "csm-api-client-python"
version = "1.0.0"
description = "Python client library for CSM APIs"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.24.0"
inflect = ">=0.2.5"
kubernetes = "^23.0.0"
PyYAML = "<6.0"
requests = "<3.0"
requests-oauthlib = "^1.3.1"

[tool.poetry.dev-dependencies]
nose2 = "^0.12.0"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
