[tool.poetry]
name = "csm-api-client-python"
version = "1.0.0"
description = "Python client library for CSM APIs"
authors = [
    "Ryan Haasken <ryan.haasken@hpe.com>",
    "Eli Kamin <eli.kamin@hpe.com>",
    "Jack Stanek <jack.stanek@hpe.com>",
    "Pat Tovo <pat.tovo@hpe.com"
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Cray-HPE/sat"
packages = [{include = "csm_api_client"}]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.24.0"
inflect = ">=0.2.5"
kubernetes = "^23.0.0"
PyYAML = "<6.0"
requests = "<3.0"
requests-oauthlib = "^1.3.1"

[tool.poetry.group.dev.dependencies]
nose2 = "^0.12.0"
mypy = "^0.971"
types-PyYAML = "<6.0"
types-oauthlib = "^3.2.0"
types-requests = "<3.0"
boto3-stubs = {version = "^1.24.65", extras = ["s3"]}

[tool.mypy]
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
